--- a/docs/quarto-manuscript.qmd
+++ b/docs/quarto-manuscript.qmd
@@ -3,9 +3,13 @@ title: "Full Title"
 shorttitle: "Short Title"
 author: 
   - name: "Eric R. Scott"
-    affilliation: "University of Florida"
+    affilliation: "Department of Wildlife Ecology and Conservation, University of Florida, Gainesville, Florida 32611-0430"
+    email: "scottericr@gmail.com"
+    correspondence: true
   - name: "Emilio Bruna"
-    affiliation: "University of Florida"
+    affiliation: "Department of Wildlife Ecology and Conservation, University of Florida, Gainesville, Florida 32611-0430"
+    email: "embruna@ufl.edu"
+    correspondence: false
 bibliography: references.bib
 keywords: |
   keyword1; keyword2; keyword3
@@ -17,18 +21,11 @@ execute:
 
 <!-- This is the format for text comments that will be ignored during renderings. Do not put R code in these comments because it will not be ignored. -->
 
-<!-- With the following code you can access and display values from the yml header above. -->
+<!-- With the following shortcodes you can access and display values from the yml header above. -->
 
-```{r setup}
-#|include: false
-library(quarto)
-md <- quarto::quarto_inspect(here::here("docs", "quarto-manuscript.qmd"))$formats$html$metadata
+Running title: {{< meta shorttitle >}}
 
-```
-
-Running title: `r md$shorttitle`
-
-Keywords: `r md$keywords`
+Keywords: {{< meta keywords >}}
 
 <!-- The actual document text starts here: -->
 
@@ -44,14 +41,23 @@ Abstract text.
 
 Introduction with an in-text citation [@scottDelayedEffectsClimate2022].
 
+A cross-referencable equation:
+
+$$
+y=mx+b
+$$ {#eq-line}
+
 # Methods
 
 Methods text.
 
 # Results
 
-A reference to Table \@ref(tab:example-table).
-A reference to Figure .
+A reference to A reference to @tbl-iris.
+
+A reference to @fig-plot.
+
+A reference to @eq-line.
 
 # Discussion
 
@@ -83,16 +89,17 @@ pandoc.table(
   head(iris),
   justify = c("right", "right", "right", "right", "left"),
   full_width = FALSE,
-  caption = "(\\#tab:example-table) A table must include the table tag in order to cross-reference it correctly."
+  caption = "A table must include a #tbl- label in curly braces at the end of the caption in order to cross-reference it correctly. {#tbl-iris}"
 )
 ```
 
 # Figures
 
 ```{r}
-#| label: example-figure,
-#| fig.cap: "A caption for an example figure. It can be long and span mutiple
-#|   lines like this."
+#| label: fig-plot
+#| fig-cap: "A figure caption.  It can be long and potentially span
+#|  multiple lines in the code chunk like this one."
+
 plot(cars)
 ```
 
